tests/baselines/reference/symbolProperty15.errors.txt
symbolProperty15.ts(14,5): error TS2454: Variable 'i' is used before being assigned.


==== symbolProperty15.ts (1 errors) ====
    class C { }
    interface I {
        [Symbol.iterator]?: { x };
    }
    
    declare function foo(i: I): I;
    declare function foo(a: any): any;
    
    declare function bar(i: C): C;
    declare function bar(a: any): any;
    
    foo(new C);
    var i: I;
    bar(i);
        ~
!!! error TS2454: Variable 'i' is used before being assigned.